src/app.css
/* Reset Styles: http://meyerweb.com/eric/tools/css/reset/ */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* Line Awesome */

.fa {
  font-size: 16px;
}

/* Variables */

:root {
  --colorBlueBlack: #102542;
  --colorBlack: var(--colorBlack);
  --colorSecondaryGrey: #637389;
  --colorPaleGrey: #D5DFE5;
  --colorInputGrey: #f3f3f3;
  --colorLink: #0645ad;
  --colorDestructive: #F87060;
}

/* Global */

a {
  cursor: pointer;
}


/* Dropdown React component functional styles */

.dropdown {
  /* display: inline-block; */
}

.dropdown__content {
  display: none;
  position: absolute;
}

.dropdown--active .dropdown__content {
  display: block;
}


/* App Styles */

html, body, #app, [data-reactroot], .react-contextmenu-wrapper, .board {
  width: 100%;
  height: 100%;
}

body {
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  font-size: 14px;
  line-height: 20px;
  -webkit-font-smoothing: antialiased;
}

input {
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  font-size: 14px;
  line-height: 20px;
  color: var(--colorBlueBlack);
  padding: 0 8px;
  box-sizing: border-box;
  height: 32px;
  width: 100%;
  border-radius: 4px;
  background: #F3F3F3;
  border: 0px;
  outline: none;
}

.Notification {
  margin: 8px;
  border: 1px solid #e9edf0;
  border-radius: 4px;
  padding: 8px;
  padding-bottom: 0px;
}

.Notification p {

}
.Avatar {
  box-sizing: border-box;
  position: relative;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.27);
  padding:2px;
}

.Avatar img {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.ContextMenu {
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12);
  width: 232px;
  z-index: 10;
}

.ContextMenu__divider {
  height: 1px;
  border-top: 1px solid #f3f3f3;
}

.ContextMenu__section {
  padding: 4px 0;
}

.ContextMenu__iconBounding {
  display: inline-block;
  width: 28px;
  height: 28px;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
  margin-right: 8px;
}

.ContextMenu .react-contextmenu-item {
  padding: 4px 8px;
  cursor: pointer;
}

.ContextMenu .react-contextmenu-item:last-child {
  margin-bottom: 0px;
}

.ContextMenu__iconBounding--note {
  background-image: linear-gradient(135deg, #d2e5f7, #f1dce4);
  color: var(--colorBlueBlack);
}

.ContextMenu__iconBounding--file {
  background-image: linear-gradient(135deg, #85e2f8, #c7d7e3);
  color: #006476;
}

.ContextMenu__iconBounding .fa {
  font-size: 22px;
}

.ContextMenu__label {
  vertical-align: middle;
}

.ContextMenu h6 {
  padding-left: 8px;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 8px;
  color: var(--colorBlueBlack);
}

.ColorPicker {
  background: #fff;
  border: 0 solid rgba(0,0,0,0.25);
  border-radius: 2px;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-gap: 8px;
}

.ColorPicker__swatch {
  width: 24px;
  height: 24px;
  border-radius: 2px;
  overflow: hidden;
}

.TitleBar {
  position: fixed;
  top: 0px;
  height: 40px;
  width: 100%;
  display: flex;
  align-items: center;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12);
  z-index: 3;
}


.TitleBar .dropdown {
  display: flex;
  align-items: center;
  justify-content: center;
  width:40px;
  height:40px;
}

.TitleBar .dropdown:last-child {
  margin-right: 8px;
}
.TitleBar .dropdown__trigger {
  width:32px;
  height:32px;
  border-radius: 16px;
}
.TitleBar .dropdown.dropdown--active .dropdown__trigger {
  background-color: var(--colorPaleGrey);
}
.TitleBar .dropdown__trigger .fa {
  color: var(--colorBlueBlack);
  font-size: 24px;
  line-height: 30px; /* this is a slight hack */
  width:32px;
  text-align: center;
}

.TitleBar .dropdown__content {
  top: 52px;
  right: 12px;
}

.TitleBar__logo {
  margin-left: 12px;
  margin-right: 8px;
}

.TitleBar__titleText {
  padding: 0px 4px;
  white-space: nowrap;
  overflow:hidden;
  text-overflow: ellipsis;
}

input.TitleBar__titleText{
  font-size: 13px;
  color: black;
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  background: #F3F3F3;
  border:0px;
  outline: none;
  border-radius: 4px;
  height: 28px;
  line-height:28px;
}

.TitleBar__dropDown {

}

.HashForm {
  margin: 0 auto;
}

.HashForm input {
  color: #444;
  padding: 0;
  margin-top: 8px;
  margin-right: 8px;
  margin-bottom: 8px;
  margin-left: auto;
  margin-right: 16px;
  box-sizing: border-box;
  width: 66ch;
  height: 28px;
  font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
  color: var(--colorSecondaryGrey);
  text-align: center;
  font-size: 13px;
  border-radius: 4px;
  border: 0px;
}
.HashForm input:focus {
  outline: none;
  background: #F3F3F3;
}

.HashForm input.loading {
  background-color: #fff2cc;
}


div.board {
  background-image: url(grid.svg);
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
/* ... */

